<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textColor="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_cook"
            android:textSize="20sp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome"
            android:forceDarkAllowed="false"
            />
        
        <Button
            android:id="@+id/getStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_started"
            android:background="@drawable/round"
            android:backgroundTint="@color/green"
            android:forceDarkAllowed="false"
            android:layout_marginStart="7dp"/>

</LinearLayout>